--- a/main.html
+++ b/main.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+	<nav role="navigation">
+  <ul>
+    <li role="listitem"><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#portfolio">Portfolio</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
+
     <img src="D:\2022 TRADITIONAL DAY\20220514_121948.jpg" alt="image" role="img">
     <h1 role="heading">JALINDAR YEWALE</h1>
     <a href="https://www.linkedin.com/in/jalindar-yewale-95a83626a/">LINKEDIN</a>
