--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<nav role="navigation">
-  <ul>
+  <ul role="list">
     <li role="listitem"><a href="#home">Home</a></li>
     <li><a href="#about">About</a></li>
     <li><a href="#portfolio">Portfolio</a></li>
